Cleanup arguments and text formatting